fixed horizontal scroll

--- a/globals.css
+++ b/globals.css
@@ -14,6 +14,9 @@
     font-family: 'CustomFont', sans-serif;
 }
 
+body{
+    overflow-x: hidden;
+}
 .containerBlock {
     width: 90%;
     margin: 0 auto;
